--- a/style.scss
+++ b/style.scss
@@ -181,7 +181,7 @@ body {
   border: 2px solid #aeaeae;
   border-radius: 5px;
   padding: 20px;
-  height: 300px;
+  min-height: 300px;
   display: flex;
   align-items: center;
   &__text,
@@ -197,8 +197,6 @@ body {
   &__text {
     opacity: 0;
     display: none;
-  }
-  &__cards {
   }
 }
 .cards {
@@ -320,6 +318,64 @@ body {
       grid-row: 4/7;
       &::after {
         background-color: rgb(16, 56, 112);
+      }
+    }
+  }
+}
+
+/*======================================================*/
+
+/*===========================MediaQ=====================*/
+
+/*======================================================*/
+
+@media screen and (max-width: 480px) {
+  .cards {
+    &__form {
+      grid-template-columns: auto;
+    }
+    &__card {
+      &_merriweather,
+      &_roboto,
+      &_notosans {
+        display: flex;
+        justify-content: space-between;
+
+        grid-column: 1;
+        & input {
+          width: 0;
+        }
+        & h2 {
+          width: 60%;
+          text-align: left;
+        }
+        &::before {
+          left: 0;
+          width: 80px;
+          height: 80px;
+          border-radius: 10px;
+        }
+        &::after {
+          left: 6px;
+          top: 6px;
+          width: 71px;
+          height: 71px;
+          border-radius: 5px;
+        }
+      }
+
+      &_merriweather {
+        flex-direction: row;
+        grid-row: 1;
+      }
+
+      &_roboto {
+        grid-row: 2;
+      }
+
+      &_notosans {
+        grid-row: 3;
+        margin-bottom: 20px;
       }
     }
   }
