--- a/style.css
+++ b/style.css
@@ -1,136 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
-/* Reset CSS */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body {
-  line-height: 1;
-  font-family: Arial, sans-serif;
-  color: #333;
-}
-
-ul,
-ol {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-button {
-  padding: 0;
-  border: none;
-  background: none;
-}
-
-/* Reset CSS end*/
-/*======================================================*/
+@import "./reset.css";
 body {
   font-family: Montserrat;
   font-weight: 600;
@@ -148,7 +17,8 @@ body {
 }
 
 .container {
-  width: 600px;
+  width: 620px;
+  padding: 0 10px;
 }
 
 .tabs {
@@ -252,6 +122,7 @@ body {
   transition: 0.2s;
 }
 .cards__card_merriweather, .cards__card_roboto, .cards__card_notosans {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -268,11 +139,19 @@ body {
 .cards__card_merriweather input, .cards__card_roboto input, .cards__card_notosans input {
   margin-bottom: 50px;
   visibility: hidden;
-  position: relative;
 }
 .cards__card_merriweather h2, .cards__card_roboto h2, .cards__card_notosans h2 {
   width: 70%;
   line-height: 150%;
+}
+.cards__card_merriweather::before, .cards__card_roboto::before, .cards__card_notosans::before {
+  content: "";
+  position: absolute;
+  border: 2px solid #000;
+}
+.cards__card_merriweather::after, .cards__card_roboto::after, .cards__card_notosans::after {
+  content: "";
+  position: absolute;
 }
 .cards__card_merriweather {
   height: 100%;
@@ -285,24 +164,19 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
+  gap: 20px;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
 .cards__card_merriweather::before {
-  content: "";
-  position: absolute;
   left: 16px;
   top: 0;
   width: 140px;
   height: 140px;
-  border: 2px solid #000;
   border-radius: 15px;
 }
 .cards__card_merriweather::after {
-  content: "";
-  position: absolute;
   left: 23px;
   top: 7px;
   width: 130px;
@@ -310,21 +184,13 @@ body {
   border-radius: 10px;
   background-color: rgb(3, 148, 44);
 }
-.cards__card_roboto, .cards__card_notosans {
-  position: relative;
-}
 .cards__card_roboto::before, .cards__card_notosans::before {
-  content: "";
-  position: absolute;
   left: -50px;
   width: 80px;
   height: 80px;
-  border: 2px solid #000;
   border-radius: 10px;
 }
 .cards__card_roboto::after, .cards__card_notosans::after {
-  content: "";
-  position: absolute;
   left: -44px;
   top: 6px;
   width: 71px;
@@ -356,13 +222,14 @@ body {
   .cards__form {
     grid-template-columns: auto;
   }
+  .cards__form span::before {
+    left: -15px;
+  }
   .cards__card_merriweather, .cards__card_roboto, .cards__card_notosans {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    gap: 100px;
     grid-column: 1;
   }
   .cards__card_merriweather input, .cards__card_roboto input, .cards__card_notosans input {
