--- a/style.scss
+++ b/style.scss
@@ -1,135 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
-/* Reset CSS */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
+@import "./reset.css";
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body {
-  line-height: 1;
-  font-family: Arial, sans-serif;
-  color: #333;
-}
-
-ul,
-ol {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-button {
-  padding: 0;
-  border: none;
-  background: none;
-}
-/* Reset CSS end*/
-
-/*======================================================*/
 body {
   font-family: Montserrat;
   font-weight: 600;
@@ -141,7 +12,8 @@ body {
 }
 
 .container {
-  width: 600px;
+  width: 620px;
+  padding: 0 10px;
 }
 .tabs {
   text-align: right;
@@ -233,6 +105,7 @@ body {
     &_merriweather,
     &_roboto,
     &_notosans {
+      position: relative;
       display: flex;
       justify-content: space-between;
       hyphens: auto;
@@ -241,11 +114,19 @@ body {
       & input {
         margin-bottom: 50px;
         visibility: hidden;
-        position: relative;
       }
       & h2 {
         width: 70%;
         line-height: 150%;
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        border: 2px solid #000;
+      }
+      &::after {
+        content: "";
+        position: absolute;
       }
     }
 
@@ -255,21 +136,16 @@ body {
       grid-row: 1/7;
       grid-column: 1;
       align-items: center;
-      position: relative;
+      gap: 20px;
       justify-content: space-evenly;
       &::before {
-        content: "";
-        position: absolute;
         left: 16px;
         top: 0;
         width: 140px;
         height: 140px;
-        border: 2px solid #000;
         border-radius: 15px;
       }
       &::after {
-        content: "";
-        position: absolute;
         left: 23px;
         top: 7px;
         width: 130px;
@@ -281,19 +157,13 @@ body {
 
     &_roboto,
     &_notosans {
-      position: relative;
       &::before {
-        content: "";
-        position: absolute;
         left: -50px;
         width: 80px;
         height: 80px;
-        border: 2px solid #000;
         border-radius: 10px;
       }
       &::after {
-        content: "";
-        position: absolute;
         left: -44px;
         top: 6px;
         width: 71px;
@@ -333,14 +203,18 @@ body {
   .cards {
     &__form {
       grid-template-columns: auto;
+      & span {
+        &::before {
+          left: -15px;
+        }
+      }
     }
     &__card {
       &_merriweather,
       &_roboto,
       &_notosans {
-        display: flex;
         justify-content: space-between;
-
+        gap: 100px;
         grid-column: 1;
         & input {
           width: 0;
